bootstrap/argo-cd/ingress-argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "argocd"
    forecastle.stakater.com/icon: "https://landscape.cncf.io/logos/argo.svg"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-fury
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "internal"
  rules:
    - host: argocd.internal.REMPLACE_WITH_YOUR_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - argocd.internal.REMPLACE_WITH_YOUR_DOMAIN
      secretName: argocd-secret
